cargo-features = ["workspace-inheritance"]

[package]
name = "hyperlane-cli"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
hyperlane-core = { path = "../hyperlane-core", features = ["agent", "async"] }
hyperlane-base = { path = "../hyperlane-base" }
anyhow.workspace = true
serde.workspace = true
eyre.workspace = true
convert_case.workspace = true
serde_json.workspace = true
clap = { workspace = true, features = ["cargo"] }
ethers.workspace = true
tokio.workspace = true
colored = "2.1.0"

[build-dependencies]
abigen = { path = "../utils/abigen", features = ["ethers"] }
